[package]
name = "gll-pg-core"
version = "0.3.0"
authors = ["Jiajie Chen <noc@jiegec.ac.cn>"]
edition = "2018"
description = "A parser generator for GLL grammar, core library"
repository = "https://github.com/jiegec/gll-pg"
categories = ["parsing"]
readme = "../README.md"
keywords = ["gll", "parser", "parsing"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.4"
logos = "0.9"
streaming-iterator = "0.1"
