[package]
name = "gll-pg-core"
version = "0.5.0"
authors = ["Jiajie Chen <noc@jiegec.ac.cn>"]
edition = "2021"
description = "A parser generator for GLL grammar, core library"
repository = "https://github.com/jiegec/gll-pg"
categories = ["parsing"]
readme = "../README.md"
keywords = ["gll", "parser", "parsing"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.4"
logos = "0.11.4"
streaming-iterator = "0.1.5"
