[package]
name = "gll-pg-macros"
version = "0.1.0"
authors = ["Jiajie Chen <noc@jiegec.ac.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "0.15", features = ["extra-traits", "full"] }
aho-corasick = "0.7"
quote = "0.6"

[lib]
proc-macro = true
