[package]
name = "gll-pg-macros"
version = "0.4.0"
authors = ["Jiajie Chen <noc@jiegec.ac.cn>"]
edition = "2021"
description = "A parser generator for GLL grammar, macros part"
repository = "https://github.com/jiegec/gll-pg"
categories = ["parsing"]
readme = "../README.md"
keywords = ["gll", "parser", "parsing", "macros"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.58", features = ["extra-traits", "full"] }
aho-corasick = "0.7.15"
quote = "1.0.8"

[lib]
proc-macro = true
