[package]
name = "tests"
version = "0.1.0"
authors = ["Jiajie Chen <noc@jiegec.ac.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gll-pg-macros = { path = "../gll-pg-macros" }
gll-pg-core = { path = "../gll-pg-core" }
logos = "0.11.4"
